[package]
name = "rattan"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
default-run = "rattan"

[workspace]
resolver = "2"
members = [".", "rattan-core", "rattan-log"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.86"
homepage = "https://github.com/stack-rs/rattan"
repository = "https://github.com/stack-rs/rattan"

[workspace.dependencies]
derive_more = { version = "2.0.1", features = ["deref", "deref_mut"] }
bitfield = "0.19.0"
clap = { version = "4.2.4", features = ["derive"] }
csv = "1.4.0"
ctrlc = "3.2.5"
figment = { version = "0.10", features = ["env", "json", "toml"] }
futures = "0.3.29"
human-bandwidth = { version = "0.1.4", features = ["binary-system", "serde"] }
jiff = "0.2.15"
netem-trace = { version = "0.4.4", features = [
  "human",
  "mahimahi",
  "serde",
  "trace-ext",
] }
nix = { version = "0.29.0", features = [
  "event",
  "ioctl",
  "mount",
  "net",
  "sched",
  "signal",
  "time",
] }
num_enum = "0.7.5"
once_cell = "1.19"
pcap-file = { version = "2.0.0" }
rand = "0.9.1"
serde = { version = "1.0.160", features = ["derive"] }
test-log = { version = "0.2.18", features = ["trace"] }
tokio = { version = "1.26.0", features = [
  "macros",
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
  "tokio-macros",
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[[bin]]
name = "rattan"
path = "src/main.rs"

[[bin]]
name = "rattan-xdp"
path = "src/main-xdp.rs"
required-features = ["rattan-core/camellia"]

[dependencies]
# anyhow = "1.0.75"
# bollard = "0.15.0"
clap = { workspace = true }
csv = { workspace = true }
ctrlc = { workspace = true }
dirs = "6.0.0"
figment = { workspace = true }
futures = { workspace = true }
human-bandwidth = { workspace = true }
human-time = "0.1.6"
jiff = { workspace = true }
mnl = { version = "0.3.0", optional = true }
netem-trace = { workspace = true }
nftnl = { version = "0.9.0", optional = true }
nix = { workspace = true }
once_cell = { workspace = true }
paste = "1.0.14"
rand = { workspace = true }
rattan-core = { path = "rattan-core", features = ["serde"] }
rattan-log = { path = "rattan-log" }
serde = { workspace = true }
serde_json = "1.0.114"
shadow-rs = { version = "1.3.0", default-features = false }
tokio = { workspace = true }
toml = "0.9.2"
tracing = { workspace = true }
tracing-appender = "0.2.3"
tracing-subscriber = { workspace = true }

[build-dependencies]
shadow-rs = "1.3.0"

[features]
default = ["first-packet"]
first-packet = ["rattan-core/first-packet"]
http = ["rattan-core/http"]
nat = ["dep:mnl", "dep:nftnl"]
packet-dump = ["rattan-core/packet-dump"]

# required for cargo flamegraph
[profile.dev]
opt-level = 0
debug = true

# required for cargo flamegraph
[profile.release]
debug = true
