[package]
name = "rattan-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
# bollard = "0.15.0"
clap = { version = "4.2.4", features = ["derive"] }
dirs = "5.0.1"
figment = { version = "0.10", features = ["toml", "env"] }
futures = "0.3.29"
humantime = "2.1.0"
netem-trace = { version = "0.3.1", features = ["mahimahi"] }
paste = "1.0.14"
rand = "0.8.5"
rattan = { path = "../rattan", features = ["serde"] }
serde_json = "1.0.114"
tokio = "1.28.0"
toml = "0.8.12"
tracing = "0.1.37"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[features]
http = ["rattan/http"]
packet-dump = ["rattan/packet-dump"]
