[package]
name = "rattan-core"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
axum = { version = "0.7.5", optional = true }
backon = "0.4.4"
bandwidth = "0.3.0"
figment = { workspace = true }
camellia = { git = "https://github.com/minhuw/camellia.git", optional = true }
ctrlc = "3.2.5"
etherparse = "0.14.3"
futures = { workspace = true }
humantime-serde = { version = "1.1.1", optional = true }
ipnet = "2.8.0"
lazy_static = "1.4.0"
libc = "0.2.141"
netem-trace = { workspace = true }
netlink-packet-route = "0.19.0"
nix = "0.26.2"
once_cell = "1.17.1"
parking_lot = "0.12.1"
pcap-file = { version = "2.0.0", optional = true }
rand = { workspace = true }
rtnetlink = "0.14.1"
serde = { version = "1.0.160", optional = true, features = ["derive"] }
serde_json = { version = "1.0.96", optional = true }
thiserror = "1.0.40"
tokio = { workspace = true }
tokio-util = "0.7.7"
tracing = { workspace = true }
tempfile = "3.10.1"

[dev-dependencies]
anyhow = "1.0.69"
criterion = "0.5.1"
ctrlc = "3.2.5"
insta = { version = "1.39.0", features = ["json"] }
itertools = "0.13.0"
netns-rs = "0.1.0"
regex = "1.7.3"
clap = "4.5.4"
reqwest = { version = "0.11.16", default-features = false, features = [
    "json",
    "blocking",
] }
test-log = { version = "0.2.12", default-features = false, features = [
    "trace",
] }
tracing-subscriber = { workspace = true }

[[bench]]
name = "bandwidth"
harness = false

[features]
default = []
http = ["serde", "dep:axum"]
packet-dump = ["dep:pcap-file"]
serde = [
    "dep:humantime-serde",
    "dep:serde",
    "dep:serde_json",
    "bandwidth/serde",
]
camellia = [
    "dep:camellia",
]

[[example]]
name = "channel-xdp"
required-features = ["camellia"]
