[package]
name = "rattan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.68"
axum = "0.6.16"
axum-macros = "0.3.7"
bandwidth = { version = "0.3.0", features = ["serde"] }
ctrlc = "3.2.5"
duration-str = "0.5.0"
etherparse = "0.13.0"
futures = "0.3.26"
lazy_static = "1.4.0"
libc = "0.2.141"
netem-trace = { version = "0.1.0", default-features = false }
nix = "0.26.2"
parking_lot = "0.12.1"
rand = "0.8.5"
regex = "1.7.3"
rtnetlink = "0.12.0"
serde = { version = "1.0.160", features = ["serde_derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = [
    "rt-multi-thread",
    "time",
    "net",
    "sync",
    "signal",
    "tokio-macros",
    "macros",
] }
tokio-timerfd = "0.2.0"
tokio-util = "0.7.7"

[dev-dependencies]
criterion = "0.4"
netns-rs = "0.1.0"

[[bench]]
name = "bandwidth"
harness = false
