[package]
name = "rattan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.68"
axum = { version = "0.6.16", optional = true }
axum-macros = { version = "0.3.7", optional = true }
bandwidth = "0.3.0"
ctrlc = "3.2.5"
etherparse = "0.13.0"
futures = "0.3.26"
humantime-serde = { version = "1.1.1", optional = true }
lazy_static = "1.4.0"
libc = "0.2.141"
netem-trace = { version = "0.1.0", default-features = false }
nix = "0.26.2"
once_cell = "1.17.1"
parking_lot = "0.12.1"
rand = "0.8.5"
regex = "1.7.3"
rtnetlink = "0.13.0"
serde = { version = "1.0.160", optional = true, features = ["derive"] }
serde_json = { version = "1.0.96", optional = true }
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = [
    "rt-multi-thread",
    "time",
    "net",
    "sync",
    "signal",
    "tokio-macros",
    "macros",
] }
tokio-timerfd = "0.2.0"
tokio-util = "0.7.7"
tracing = "0.1.37"

[dev-dependencies]
criterion = "0.4"
netns-rs = "0.1.0"
reqwest = { version = "0.11.16", default-features = false, features = [
    "json",
    "blocking",
] }
test-log = { version = "0.2.12", default-features = false, features = ["trace"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[[bench]]
name = "bandwidth"
harness = false

[features]
control = []
default = []
http = ["control", "serde", "dep:axum", "dep:axum-macros"]
serde = ["dep:humantime-serde", "dep:serde", "dep:serde_json", "bandwidth/serde"]
